<?xml version="1.0"?>
<package>
  <name>ros_face_count</name>
  <version>0.1.1</version>
  <description>The ros_face_count package</description>

  <maintainer email="ryou.asia@gmail.com">Ryou Watanabe</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
